...
    
    private let movieBanner: UIImageView = {
        let movieBanner = UIImageView()
        movieBanner.clipsToBounds = true
        movieBanner.layer.cornerRadius = 12
        movieBanner.translatesAutoresizingMaskIntoConstraints = false
        movieBanner.accessibilityIdentifier = "ExploreDetailVC_MovieBanner"
        movieBanner.isAccessibilityElement = false
        return movieBanner
    }()
    
    private let titleLabel = FFLabel(font: .preferredFont(forTextStyle: .extraLargeTitle2), textColor: .label, accessibilityIdentifer: "ExploreDetailVC_TitleLabel", accessibilityTraits: .header)

    private let originalTitlesLabel = FFLabel(font: .preferredFont(forTextStyle: .title2), textColor: .secondaryLabel, accessibilityIdentifer: "ExploreDetailVC_OriginalTitlesLabel")

    private let releaseDateAndRunningTimeLabel = FFLabel(font: .preferredFont(forTextStyle: .title2), textColor: .secondaryLabel, accessibilityIdentifer: "ExploreDetailVC_ReleaseDateAndRunningTimeLabel")

    private let rottenTomatoesScoreLabel = FFLabel(font: .preferredFont(forTextStyle: .title2), textColor: nil, accessibilityIdentifer: "ExploreDetailVC_RottenTomatoesScoreLabel")
    
    private let synopsisHeaderLabel = FFLabel(font: .preferredFont(forTextStyle: .headline), textColor: .label, accessibilityIdentifer: "ExploreDetailVC_SynopsisHeaderLabel", accessibilityTraits: .header)
    
    private let synopsisLabel = FFLabel(font: .preferredFont(forTextStyle: .body), textColor: .label, accessibilityIdentifer: "ExploreDetailVC_SynopsisLabel")
    
    private let creditsContainer: FilmCreditsStackView = {
        let creditsContainer = FilmCreditsStackView()
        creditsContainer.spacing = 20
        creditsContainer.translatesAutoresizingMaskIntoConstraints = false
        creditsContainer.isAccessibilityElement = true
        creditsContainer.accessibilityIdentifier = "ExploreDetailVC_CreditsContainer"
        return creditsContainer
    }()
    
    let upNextButton = FFButton(title: "", systemImageName: "", accessibilityIdentifier: "ExploreDetailVC_UpNextButton", accessibilityHint: "")

    let watchedButton = FFButton(title: "", systemImageName: "", accessibilityIdentifier: "ExploreDetailVC_WatchedButton", accessibilityHint: "")

    private let moreLikeThisButton = FFButton(title: "More Like This", systemImageName: "sparkles", accessibilityIdentifier: "ExploreDetailVC_MoreLikeThisButton", accessibilityHint: "Discover more films you might like")
    
    private let buttonsContainer: UIStackView = {
        let buttonsContainer = UIStackView()
        buttonsContainer.spacing = 20
        buttonsContainer.distribution = .fillEqually
        buttonsContainer.alignment = .fill
...
        setupConstraints()
        registerForTraitChanges([UITraitHorizontalSizeClass.self,
                                 UITraitPreferredContentSizeCategory.self]) { (self: Self, previousTraitCollection: UITraitCollection) in
            self.updateLayoutForTraits()
        }
        updateLayoutForTraits()
        view.accessibilityIdentifier = "ExploreDetailVC_View"
        filmDetailViewModel.setFilm()
    }
    
    private func updateLayoutForTraits() {
        let isRegularHorizontalSizeClass = traitCollection.horizontalSizeClass == .regular
        let isAccessibilityText = traitCollection.preferredContentSizeCategory.isAccessibilityCategory
...
